--- a/SpareTimeMusicApp/orangeTheme.plist
+++ b/SpareTimeMusicApp/orangeTheme.plist
@@ -6,7 +6,7 @@
 	<string>#FFD900</string>
 	<key>BackgroundImage</key>
 	<string>background_orange</string>
-	<key>SecondaryColor</key>
-	<string>#FFFFFF</string>
+	<key>BackgroundColor</key>
+	<string>#FFA000</string>
 </dict>
 </plist>
