Updated Travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
-language: objective-c
+language: swift
+before_install:
+- gem install cocoapods -v '0.38.2'
+
+# Use when you have third party dependencies (CocoaPods generates a workspace)
+podfile: Pod/Podfile
+script: xctool -workspace Pod/Pod.xcworkspace -scheme Tests -sdk iphonesimulator build test
